# kas-moe-back

./: .backend.example.env  .database-admin.example.env  .database.example.env  .flake8  .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.traefik.yml  docker-compose.yml  flake.nix  init.sh  pyproject  pyproject.toml  routes.js  server.js  setup.cfg  tasks.py
app/: main.py
app/routers/: users.py
app/utils/: auth.py
src/: main.py
src/conf/: defs.py
src/config/: __init__.py  auth.py  database.py  defs.py  glob.py  gunicorn.py
src/models/: roll.py  user.py
src/routers/: auth.py  roll.py  users.py
src/schemas/: user.py
src/services/: auth.py  roll.py
src/services/email/: __init__.py
src/services/email/templates/: recovery.html  register.html  verify.html
src/services/email/templates/data/: recovery.json  register.json  verify.json
src/utils/: roles.py  users.py
