[tool.poetry]
name = "kas-moe-back"
version = "0.1.0"
description = "KAS MOE BackEnd"
authors = ["Federico Corvalán <hi@fedr.cc>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = {extras = ["standard"], version = "^0.13.4"}
fastapi-users = {extras = ["mongodb"], version = "^5.1.0"}
motor = "^2.3.1"
Motor-ODM = "^0.1.dev0"
httpx = "0.17.0"
Jinja2 = "^2.11.3"
python-magic = "0.4.22"
pandas = "1.2.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
